--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-# Auto detect text files and perform LF normalization
+c:\Users\DJ CHRONIX232\Desktop\project\pass word genaration\index.css c:\Users\DJ CHRONIX232\Desktop\project\pass word genaration\index.html c:\Users\DJ CHRONIX232\Desktop\project\pass word genaration\index.js# Auto detect text files and perform LF normalization
 * text=auto
